--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "reflect-metadata": "^0.1.13",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "truncate-middle": "^1.0.6",
